updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a software developer.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Paris (France)</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>My favorite hobbies is the following: Playing soccer, listening to music, going to work out, watching series, and so on. </p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job is be the CEO of a very succesful high tech company. </p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p> I live in New York City</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>The reason why I want  to be a web developer is that i wanted to start something new. </p>
     </section>
 
     <footer id="footer">
